Refactor to add DB env vars to worker.
Fixes db cred errors.

Signed-off-by: Christopher Mundus <chris@kindlyops.com>

--- a/k8s/worker-deployment.yaml
+++ b/k8s/worker-deployment.yaml
@@ -16,6 +16,20 @@ spec:
         - name: worker
           image: kindlyops/havenworker
           env:
+            - name: DATABASE_NAME
+              value: "havenstage"
+            - name: DATABASE_HOST
+              value: "db"
+            - name: DATABASE_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: haven-database-credentials
+                  key: username
+            - name: DATABASE_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: haven-database-credentials
+                  key: password
             - name: FAKTORY_URL
               valueFrom:
                 secretKeyRef:
