New way to specify welcome theme in Keycloak 4.5
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/keycloak/Dockerfile
+++ b/keycloak/Dockerfile
@@ -25,6 +25,7 @@ ENV         KEYCLOAK_USER admin
 ENV         KEYCLOAK_PASSWORD admin
 ENV         PROXY_ADDRESS_FORWARDING true
 ENV         KEYCLOAK_LOGLEVEL DEBUG
+ENV         KEYCLOAK_WELCOME_THEME haven
 EXPOSE 8443
 EXPOSE 8080
 CMD         ["-b", "0.0.0.0"]
