--- a/k8s/worker-deployment.yaml
+++ b/k8s/worker-deployment.yaml
@@ -48,6 +48,11 @@ spec:
               value: "8080"
             - name: SENTRY_ENVIRONMENT
               value: "staging"
+            - name: SENTRY_DSN
+              valueFrom:
+                secretKeyRef:
+                  name: sentry
+                  key: dsn
           volumeMounts:
             - mountPath: "/home/rstudio/kitematic"
               name: worker-vol
