--- a/webui/package.json
+++ b/webui/package.json
@@ -25,7 +25,7 @@
     "css-loader": "^0.28.5",
     "daemonite-material": "^4.1.1",
     "dotenv": "^4.0.0",
-    "elm": "^0.18.0",
+    "elm": "^0.19.0-bugfix2",
     "elm-hot-loader": "0.5.4",
     "elm-test": "^0.18.8",
     "elm-webpack-loader": "^4.3.0",
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
+    "elm-format": "^0.8.1",
     "resolve-url-loader": "^2.1.0"
   }
 }
