Major upgrade to webpack 4.
npm run-script build now runs enough to show us the Elm
compiler errors remaining from the Elm 19 upgrade.

Still need to fix npm run-script start.

Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
           no_output_timeout: 15m
           working_directory: webui
       - save_cache:
-          key: dependency-cache-{{ checksum "webui/package.json" }}
+          key: dependency-cache-{{ checksum "webui/elm.json" }}
           paths:
             - ./webui/node_modules
       - run:
