initial cypress test of keycloak login page.
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ webui/node_modules/*
 webui/public/node_modules/*
 webui/elm-stuff/*
 webui/bower_components/*
+webui/cypress/videos/*
 docs/_book/*
 .vscode/*
 npm-debug.log
