Fix unhandled js exception in Keycloak login page.
Cypress found a bug already on the very first screen it loaded.

There was an unhandled exception being thrown from material.min.js
about (intermediate) not being a function.
Re-ordering the JS includes seems to have avoided the exception,
apparently this can happen sometimes with uglify/contatenate of
scripts.

Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ webui/public/node_modules/*
 webui/elm-stuff/*
 webui/bower_components/*
 webui/cypress/videos/*
+webui/cypress/screenshots/*
 docs/_book/*
 .vscode/*
 npm-debug.log
