--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -152,7 +152,7 @@ jobs:
       - notify-failed
   havenapi-testing-job:
     docker:
-      - image: circleci/ruby:2.4
+      - image: circleci/node:lts-browsers
     steps:
       - checkout
       - add_ssh_keys
@@ -216,6 +216,8 @@ jobs:
             docker run --network net0 jwilder/dockerize  -wait tcp://api:8180 -timeout 2m
             docker run --volumes-from configs --network net0 -e KC_ADMIN=admin -e KC_PW=admin -e KC_HOST=http://keycloak -e KC_PORT=8080 -e TEST_DATABASE_URL -e HAVEN_JWK_PATH kindlyops/havenapitest /go/bin/buffalo test
             docker run --volumes-from configs --network net0 -e API_SERVER -e AUTH_SERVER --workdir /usr/src/app kindlyops/apitest cucumber
+            npm install
+            npx cypress run
       - notify-failed
   deploy-staging:
     docker:
