use node8 for cypress
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -152,7 +152,7 @@ jobs:
       - notify-failed
   havenapi-testing-job:
     docker:
-      - image: circleci/node:lts-browsers
+      - image: circleci/node:8-browsers
     steps:
       - checkout
       - add_ssh_keys
