--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ webui/elm-stuff/*
 webui/bower_components/*
 webui/cypress/videos/*
 webui/cypress/screenshots/*
+webui/pki/*.pem
+webui/pki/*.key
+webui/pki/*.csr
 docs/_book/*
 .vscode/*
 npm-debug.log
