--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -218,7 +218,7 @@ jobs:
             docker run --volumes-from configs --network net0 -e API_SERVER -e AUTH_SERVER --workdir /usr/src/app kindlyops/apitest cucumber
             echo $WEBUI_TEST_CERT|base64 -d - > fullchain.pem
             echo $WEBUI_TEST_KEY|base64 -d - > privkey.pem
-            docker run -d --volume ./fullchain.pem:/certs/fullchain.pem --volume ./privkey.pem:/certs/privkey.pem --network net0 -h webui --name havenweb -e ELM_APP_KEYCLOAK_CLIENT_ID=havendev --publish 127.0.0.1:80:8080 kindlyops/havenweb:$CIRCLE_SHA1 
+            docker run -d --volume `pwd`/fullchain.pem:/certs/fullchain.pem --volume `pwd`/privkey.pem:/certs/privkey.pem --network net0 -h webui --name havenweb -e ELM_APP_KEYCLOAK_CLIENT_ID=havendev --publish 127.0.0.1:80:8080 kindlyops/havenweb:$CIRCLE_SHA1 
             cd webui && npm install cypress
             npx cypress run
       - notify-failed
