WIP snapshot: keycloak.js -> gatekeeper conversion
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -274,7 +274,7 @@ services:
       dockerfile: ./webui/Dockerfile-hotreload
     depends_on:
       - api
-      # - havenapi
+      - havenapi
       - keycloak
       - unleash
     ports:
