--- a/k8s/havenapi-deployment.yaml
+++ b/k8s/havenapi-deployment.yaml
@@ -39,6 +39,8 @@ spec:
                   key: password
             - name: HAVEN_JWK_PATH
               value: "/etc/haven-credentials/jwk.json"
+            - name: HAVEN_JWT_ISS
+              value: "https://staging.havengrc.com/auth/realms/havendev"
             - name: KC_HOST
               value: "https://havenweb"
             - name: KC_PORT
