--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -187,6 +187,7 @@ jobs:
             - TEST_DATABASE_URL: postgres://circleci@db:5432/mappamundi_test?sslmode=disable
             - API_SERVER: api:8180
             - AUTH_SERVER: keycloak:8080
+            - BUFFALO_SERVER: havenapi:3000
           command: |
             # create network for containers
             docker network create -d bridge net0
@@ -216,8 +217,8 @@ jobs:
             docker run -d --volumes-from configs --network net0 -h api --name api -e DATABASE_USERNAME -e DATABASE_PASSWORD -e DATABASE_HOST -e HAVEN_JWK_PATH -e PGRST_JWT_AUD_CLAIM -e PGRST_SERVER_PROXY_URI kindlyops/postgrest postgrest config
             docker run --network net0 jwilder/dockerize  -wait tcp://api:8180 -timeout 2m
             docker run --volumes-from configs --network net0 -e KC_ADMIN=admin -e KC_PW=admin -e KC_HOST=http://keycloak -e KC_PORT=8080 -e TEST_DATABASE_URL -e HAVEN_JWK_PATH -e HAVEN_JWT_ISS kindlyops/havenapitest /go/bin/buffalo test
-            docker run --volumes-from configs --network net0 -d -e KC_ADMIN=admin -e KC_PW=admin -e KC_HOST=http://keycloak -e KC_PORT=8080 -e TEST_DATABASE_URL -e HAVEN_JWK_PATH -e HAVEN_JWT_ISS kindlyops/havenapitest /go/bin/buffalo dev
-            docker run --volumes-from configs --network net0 -e API_SERVER -e AUTH_SERVER --workdir /usr/src/app kindlyops/apitest cucumber
+            docker run --volumes-from configs --network net0 -d -h havenapi --name havenapi -e KC_ADMIN=admin -e KC_PW=admin -e KC_HOST=http://keycloak -e KC_PORT=8080 -e TEST_DATABASE_URL -e HAVEN_JWK_PATH -e HAVEN_JWT_ISS kindlyops/havenapitest /go/bin/buffalo dev
+            docker run --volumes-from configs --network net0 -e API_SERVER -e AUTH_SERVER -e BUFFALO_SERVER --workdir /usr/src/app kindlyops/apitest cucumber
             echo $WEBUI_TEST_CERT|base64 -d - > fullchain.pem
             echo $WEBUI_TEST_KEY|base64 -d - > privkey.pem
             # creating dummy container which will hold a volume with config
