--- a/gatekeeper/gatekeeper.yaml
+++ b/gatekeeper/gatekeeper.yaml
@@ -37,3 +37,5 @@ resources:
   white-listed: true
 - uri: /auth/*
   white-listed: true # this is the keycloak server, handles it's own auth
+- uri: /auth/realms/havendev/protocol/openid-connect/userinfo
+  require-any-role: true # we require a role so that gatekeeper forwards the JWT
