Refactor to template config for gatekeeper
Signed-off-by: Christopher Mundus <chris@kindlyops.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -203,7 +203,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./gatekeeper/gatekeeper.yaml:/opt/gatekeeper.yaml
+      - ./gatekeeper/gatekeeper.tpml:/opt/gatekeeper.tpml
     command:
       - --config
       - /opt/gatekeeper.yaml
