A bunch of fixes for cypress tests and gatekeeper.
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -223,6 +223,7 @@ jobs:
             docker create -v /cfg -v /keycloak --name configs alpine:3.4 /bin/true
             docker cp postgrest/keycloak-dev-public-key.json configs:/cfg
             docker cp keycloak/data/havendev-realm.json configs:/keycloak
+            docker cp webui/cypress-ci.json configs:/home/node/cypress.json
             # start keycloak in background container
             docker run --volumes-from configs --network net0 -d -e DB_DATABASE -e DB_USER -e DB_ADDR -e KEYCLOAK_USER -e KEYCLOAK_PASSWORD -e PROXY_ADDRESS_FORWARDING -h keycloak --name keycloak kindlyops/keycloak:$CIRCLE_SHA1 -b 0.0.0.0 -Dkeycloak.migration.file=/keycloak/havendev-realm.json -Dkeycloak.migration.strategy=IGNORE_EXISTING -Dkeycloak.migration.provider=singleFile -Dkeycloak.migration.action=import
             # Wait for keycloak
@@ -243,8 +244,10 @@ jobs:
             docker cp fullchain.pem certs:/certs
             docker cp privkey.pem certs:/certs
             docker run -d --volumes-from certs --network net0 -h webui --name havenweb -e ELM_APP_KEYCLOAK_CLIENT_ID=havendev --publish 127.0.0.1:8443:8443 kindlyops/havenweb:$CIRCLE_SHA1 
+            docker build -t kindlyops/gatekeeper -f gatekeeper/Dockerfile ./gatekeeper
+            docker run -d --network net0 -h gatekeeper --name gatekeeper  kindlyops/gatekeeper:$CIRCLE_SHA1
             docker build -t kindlyops/cypress -f webui/Dockerfile-cypress ./webui
-            docker run --network net0 --link havenweb kindlyops/cypress
+            docker run --volumes-from configs --network net0 --link gatekeeper kindlyops/cypress
       - notify-failed
       - run:
           name: notify tests complete
