--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -204,6 +204,8 @@ jobs:
             - API_SERVER: api:8180
             - AUTH_SERVER: keycloak:8080
             - BUFFALO_SERVER: havenapi:3000
+            - DISCOVERY_URL: http://keycloak:8080/auth/realms/havendev
+            - UPSTREAM_URL: http://webui:8443/
           command: |
             # create network for containers
             docker network create -d bridge net0
@@ -224,7 +226,7 @@ jobs:
             docker cp postgrest/keycloak-dev-public-key.json configs:/cfg
             docker cp keycloak/data/havendev-realm.json configs:/keycloak
             mkdir -p home/node
-            sudo cp webui/cypress-ci.json /home/node/cypress.json
+            cp webui/cypress-ci.json /webui/cypress.json
             docker cp home configs:/home
             # start keycloak in background container
             docker run --volumes-from configs --network net0 -d -e DB_DATABASE -e DB_USER -e DB_ADDR -e KEYCLOAK_USER -e KEYCLOAK_PASSWORD -e PROXY_ADDRESS_FORWARDING -h keycloak --name keycloak kindlyops/keycloak:$CIRCLE_SHA1 -b 0.0.0.0 -Dkeycloak.migration.file=/keycloak/havendev-realm.json -Dkeycloak.migration.strategy=IGNORE_EXISTING -Dkeycloak.migration.provider=singleFile -Dkeycloak.migration.action=import
@@ -245,11 +247,11 @@ jobs:
             docker create -v /certs --name certs alpine:3.4 /bin/true
             docker cp fullchain.pem certs:/certs
             docker cp privkey.pem certs:/certs
-            docker run -d --volumes-from certs --network net0 -h webui --name havenweb -e ELM_APP_KEYCLOAK_CLIENT_ID=havendev --publish 127.0.0.1:8443:8443 kindlyops/havenweb:$CIRCLE_SHA1 
+            docker run -d --volumes-from certs --network net0 -h webui --name webui -e ELM_APP_KEYCLOAK_CLIENT_ID=havendev --publish 127.0.0.1:8443:8443 kindlyops/havenweb:$CIRCLE_SHA1 
             docker build -t kindlyops/gatekeeper -f gatekeeper/Dockerfile ./gatekeeper
-            docker run -d --network net0 -h gatekeeper --name gatekeeper  kindlyops/gatekeeper:$CIRCLE_SHA1
+            docker run -d --network net0 -h gatekeeper --name gatekeeper -e DISCOVERY_URL -e UPSTREAM_URL kindlyops/gatekeeper:latest
             docker build -t kindlyops/cypress -f webui/Dockerfile-cypress ./webui
-            docker run --volumes-from configs --network net0 --link gatekeeper kindlyops/cypress
+            docker run --network net0 kindlyops/cypress
       - notify-failed
       - run:
           name: notify tests complete
