https fixes for gatekeeper in circleCI
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -204,6 +204,7 @@ services:
       - "443:443"
     volumes:
       - ./gatekeeper/gatekeeper.tpml:/opt/gatekeeper.tpml
+      - ./webui/pki:/certs
     links:
       - webui:dev.havengrc.com
   worker:
