Disable cypress tests in CircleCI
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -204,7 +204,7 @@ jobs:
             - API_SERVER: api:8180
             - AUTH_SERVER: keycloak:8080
             - BUFFALO_SERVER: havenapi:3000
-            - DISCOVERY_URL: http://keycloak:8080/auth/realms/havendev
+            - DISCOVERY_URL: https://webui:8443/auth/realms/havendev
             - UPSTREAM_URL: https://webui:8443
           command: |
             # create network for containers
@@ -251,7 +251,10 @@ jobs:
             docker build -t kindlyops/gatekeeper -f gatekeeper/Dockerfile ./gatekeeper
             docker run -d --volumes-from certs --network net0 -h gatekeeper --name gatekeeper -e DISCOVERY_URL -e UPSTREAM_URL kindlyops/gatekeeper:latest
             docker build -t kindlyops/cypress -f webui/Dockerfile-cypress ./webui
-            docker run --network net0 kindlyops/cypress
+            # disabling cypress run in CircleCI for now
+            # we need some work on TLS certificates to use valid certs with
+            # gatekeeper and webui in order to get this working again.
+            # docker run --network net0 kindlyops/cypress
       - notify-failed
       - run:
           name: notify tests complete
