--- a/gatekeeper/Dockerfile
+++ b/gatekeeper/Dockerfile
@@ -11,6 +11,8 @@ ENV UPSTREAM_URL http://dev.havengrc.com/
 ENV TLS_PRIVATE_KEY /certs/privkey.pem
 ENV TLS_CERT /certs/fullchain.pem
 
+RUN addgroup -S havenuser && adduser -S -g havenuser havenuser
+
 RUN apk add --no-cache openssl
 
 ENV DOCKERIZE_VERSION v0.6.1
@@ -18,6 +20,9 @@ RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSI
     && tar -C /usr/local/bin -xzvf dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
     && rm dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz
 
+RUN chown -R havenuser:havenuser /opt && chgrp -R 0 /opt && chmod -R g=u /opt
+USER havenuser
 COPY gatekeeper.tmpl /opt/gatekeeper.tmpl
+RUN chown -R havenuser:havenuser /opt/gatekeeper.tmpl
 
 ENTRYPOINT ["/usr/local/bin/dockerize", "-template", "/opt/gatekeeper.tmpl:/opt/gatekeeper.yaml", "/opt/keycloak-gatekeeper", "--config", "/opt/gatekeeper.yaml", "--verbose"]
